kubernetes/apps/satisfactory/satisfactory/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: satisfactory
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - satisfactory.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: satisfactory
          port: 7777
